--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "crud-filmes",
+  "name": "filmes",
   "version": "0.0.0",
+  "description": "Curso avançado angular",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -11,35 +12,45 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.2.6",
-    "@angular/common": "~11.2.6",
-    "@angular/compiler": "~11.2.6",
-    "@angular/core": "~11.2.6",
-    "@angular/forms": "~11.2.6",
-    "@angular/platform-browser": "~11.2.6",
-    "@angular/platform-browser-dynamic": "~11.2.6",
-    "@angular/router": "~11.2.6",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.11.3"
+    "@angular/animations": "^11.2.7",
+    "@angular/cdk": "^11.2.7",
+    "@angular/common": "^11.2.7",
+    "@angular/compiler": "^11.2.7",
+    "@angular/core": "^11.2.7",
+    "@angular/forms": "^11.2.7",
+    "@angular/localize": "^11.2.7",
+    "@angular/material": "^11.2.7",
+    "@angular/platform-browser": "^11.2.7",
+    "@angular/platform-browser-dynamic": "^11.2.7",
+    "@angular/router": "^11.2.7",
+    "@ngrx/effects": "^9.2.1",
+    "@ngrx/entity": "^9.2.1",
+    "@ngrx/schematics": "^9.2.1",
+    "@ngrx/store": "^9.2.1",
+    "core-js": "^3.2.1",
+    "rxjs": "^6.0.0",
+    "tslib": "^1.10.0",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1102.5",
-    "@angular/cli": "~11.2.5",
-    "@angular/compiler-cli": "~11.2.6",
-    "@types/jasmine": "~3.6.0",
+    "@angular-devkit/build-angular": "~0.1102.6",
+    "@angular/cli": "~11.2.6",
+    "@angular/compiler-cli": "^11.2.7",
+    "@angular/language-service": "^11.2.7",
+    "@types/jasmine": "~3.4.0",
+    "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
-    "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.1.0",
+    "codelyzer": "^5.1.2",
+    "jasmine-core": "~3.5.0",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~6.3.2",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-coverage-istanbul-reporter": "~2.1.0",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.2",
     "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
+    "ts-node": "~8.4.1",
+    "tslint": "~6.1.3",
     "typescript": "~4.1.5"
   }
 }
